--- a/index.html
+++ b/index.html
@@ -13,15 +13,25 @@
 
   <main>
     <div class="game-list">
+      <!-- Game 1: Space Shooter -->
       <div class="game-card">
         <img src="games/space-shooter/thumbnail.png" alt="Space Shooter">
         <h3>Space Shooter</h3>
         <a href="games/space-shooter/index.html" target="_blank">Play</a>
       </div>
+
+      <!-- Game 2: Platformer -->
       <div class="game-card">
         <img src="games/platformer/thumbnail.png" alt="Platformer">
         <h3>Platformer</h3>
         <a href="games/platformer/index.html" target="_blank">Play</a>
+      </div>
+
+      <!-- Game 3: Table Tennis -->
+      <div class="game-card">
+        <img src="games/table-tennis/thumbnail.png" alt="Table Tennis">
+        <h3>Table Tennis World Tour</h3>
+        <a href="games/table-tennis.html" target="_blank">Play</a>
       </div>
     </div>
   </main>
