--- a/table-tennis/table-tennis.html
+++ b/table-tennis/table-tennis.html
@@ -1,198 +1,174 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title>Basic Pong HTML Game</title>
-  <meta charset="UTF-8">
-  <style>
-  html, body {
-    height: 100%;
-    margin: 0;
-  }
-
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Pong Game</title>
+<style>
   body {
+    margin: 0;
     background: black;
     display: flex;
-    align-items: center;
     justify-content: center;
+    align-items: center;
+    height: 100vh;
+    color: white;
+    font-family: sans-serif;
+    overflow: hidden;
   }
-  </style>
+
+  canvas {
+    background: #000;
+    display: block;
+    border: 2px solid white;
+  }
+
+  #score {
+    position: absolute;
+    top: 20px;
+    font-size: 24px;
+  }
+</style>
 </head>
 <body>
-<canvas width="750" height="585" id="game"></canvas>
+<div id="score">Player: 0 | CPU: 0</div>
+<canvas id="pong" width="800" height="500"></canvas>
+
 <script>
-const canvas = document.getElementById('game');
+const canvas = document.getElementById('pong');
 const context = canvas.getContext('2d');
-const grid = 15;
-const paddleHeight = grid * 5; // 80
-const maxPaddleY = canvas.height - grid - paddleHeight;
 
-var paddleSpeed = 6;
-var ballSpeed = 5;
+const paddleWidth = 10;
+const paddleHeight = 100;
+const ballSize = 10;
 
-const leftPaddle = {
-  // start in the middle of the game on the left side
-  x: grid * 2,
-  y: canvas.height / 2 - paddleHeight / 2,
-  width: grid,
-  height: paddleHeight,
+let playerScore = 0;
+let cpuScore = 0;
 
-  // paddle velocity
-  dy: 0
-};
-const rightPaddle = {
-  // start in the middle of the game on the right side
-  x: canvas.width - grid * 3,
-  y: canvas.height / 2 - paddleHeight / 2,
-  width: grid,
-  height: paddleHeight,
+// Paddles
+const player = { x: 10, y: canvas.height/2 - paddleHeight/2, width: paddleWidth, height: paddleHeight, dy: 0 };
+const cpu = { x: canvas.width - paddleWidth - 10, y: canvas.height/2 - paddleHeight/2, width: paddleWidth, height: paddleHeight, dy: 2 };
 
-  // paddle velocity
-  dy: 0
-};
+// Ball
 const ball = {
-  // start in the middle of the game
-  x: canvas.width / 2,
-  y: canvas.height / 2,
-  width: grid,
-  height: grid,
-
-  // keep track of when need to reset the ball position
-  resetting: false,
-
-  // ball velocity (start going to the top-right corner)
-  dx: ballSpeed,
-  dy: -ballSpeed
+  x: canvas.width/2 - ballSize/2,
+  y: canvas.height/2 - ballSize/2,
+  size: ballSize,
+  dx: 4 * (Math.random() > 0.5 ? 1 : -1),
+  dy: 4 * (Math.random() > 0.5 ? 1 : -1)
 };
 
-// check for collision between two objects using axis-aligned bounding box (AABB)
-// @see https://developer.mozilla.org/en-US/docs/Games/Techniques/2D_collision_detection
-function collides(obj1, obj2) {
-  return obj1.x < obj2.x + obj2.width &&
-         obj1.x + obj1.width > obj2.x &&
-         obj1.y < obj2.y + obj2.height &&
-         obj1.y + obj1.height > obj2.y;
+// Draw everything
+function drawRect(x, y, w, h, color) {
+  context.fillStyle = color;
+  context.fillRect(x, y, w, h);
 }
 
-// game loop
-function loop() {
-  requestAnimationFrame(loop);
-  context.clearRect(0,0,canvas.width,canvas.height);
+function drawCircle(x, y, r, color) {
+  context.fillStyle = color;
+  context.beginPath();
+  context.arc(x, y, r, 0, Math.PI*2);
+  context.closePath();
+  context.fill();
+}
 
-  // move paddles by their velocity
-  leftPaddle.y += leftPaddle.dy;
-  rightPaddle.y += rightPaddle.dy;
-
-  // prevent paddles from going through walls
-  if (leftPaddle.y < grid) {
-    leftPaddle.y = grid;
+function drawNet() {
+  for(let i = 0; i < canvas.height; i += 20) {
+    drawRect(canvas.width/2 - 1, i, 2, 10, 'white');
   }
-  else if (leftPaddle.y > maxPaddleY) {
-    leftPaddle.y = maxPaddleY;
-  }
+}
 
-  if (rightPaddle.y < grid) {
-    rightPaddle.y = grid;
-  }
-  else if (rightPaddle.y > maxPaddleY) {
-    rightPaddle.y = maxPaddleY;
-  }
+// Control player
+document.addEventListener('keydown', (e) => {
+  if(e.key === 'ArrowUp') player.dy = -6;
+  if(e.key === 'ArrowDown') player.dy = 6;
+});
 
-  // draw paddles
-  context.fillStyle = 'white';
-  context.fillRect(leftPaddle.x, leftPaddle.y, leftPaddle.width, leftPaddle.height);
-  context.fillRect(rightPaddle.x, rightPaddle.y, rightPaddle.width, rightPaddle.height);
+document.addEventListener('keyup', (e) => {
+  if(e.key === 'ArrowUp' || e.key === 'ArrowDown') player.dy = 0;
+});
 
-  // move ball by its velocity
+// Move everything
+function update() {
+  // Move paddles
+  player.y += player.dy;
+
+  if(player.y < 0) player.y = 0;
+  if(player.y + paddleHeight > canvas.height) player.y = canvas.height - paddleHeight;
+
+  // CPU AI
+  if(ball.y < cpu.y + cpu.height/2) cpu.y -= cpu.dy;
+  if(ball.y > cpu.y + cpu.height/2) cpu.y += cpu.dy;
+
+  if(cpu.y < 0) cpu.y = 0;
+  if(cpu.y + paddleHeight > canvas.height) cpu.y = canvas.height - paddleHeight;
+
+  // Move ball
   ball.x += ball.dx;
   ball.y += ball.dy;
 
-  // prevent ball from going through walls by changing its velocity
-  if (ball.y < grid) {
-    ball.y = grid;
-    ball.dy *= -1;
-  }
-  else if (ball.y + grid > canvas.height - grid) {
-    ball.y = canvas.height - grid * 2;
-    ball.dy *= -1;
-  }
+  // Collisions with top/bottom
+  if(ball.y < 0 || ball.y + ball.size > canvas.height) ball.dy *= -1;
 
-  // reset ball if it goes past paddle (but only if we haven't already done so)
-  if ( (ball.x < 0 || ball.x > canvas.width) && !ball.resetting) {
-    ball.resetting = true;
-
-    // give some time for the player to recover before launching the ball again
-    setTimeout(() => {
-      ball.resetting = false;
-      ball.x = canvas.width / 2;
-      ball.y = canvas.height / 2;
-    }, 400);
+  // Collisions with paddles
+  if(ball.x < player.x + player.width &&
+     ball.x > player.x &&
+     ball.y + ball.size > player.y &&
+     ball.y < player.y + player.height) {
+       ball.dx *= -1;
+       // Add spin
+       let collidePoint = ball.y - (player.y + player.height/2);
+       collidePoint = collidePoint / (player.height/2);
+       ball.dy = collidePoint * 5;
   }
 
-  // check to see if ball collides with paddle. if they do change x velocity
-  if (collides(ball, leftPaddle)) {
-    ball.dx *= -1;
-
-    // move ball next to the paddle otherwise the collision will happen again
-    // in the next frame
-    ball.x = leftPaddle.x + leftPaddle.width;
-  }
-  else if (collides(ball, rightPaddle)) {
-    ball.dx *= -1;
-
-    // move ball next to the paddle otherwise the collision will happen again
-    // in the next frame
-    ball.x = rightPaddle.x - ball.width;
+  if(ball.x + ball.size > cpu.x &&
+     ball.x + ball.size < cpu.x + cpu.width &&
+     ball.y + ball.size > cpu.y &&
+     ball.y < cpu.y + cpu.height) {
+       ball.dx *= -1;
+       let collidePoint = ball.y - (cpu.y + cpu.height/2);
+       collidePoint = collidePoint / (cpu.height/2);
+       ball.dy = collidePoint * 5;
   }
 
-  // draw ball
-  context.fillRect(ball.x, ball.y, ball.width, ball.height);
-
-  // draw walls
-  context.fillStyle = 'lightgrey';
-  context.fillRect(0, 0, canvas.width, grid);
-  context.fillRect(0, canvas.height - grid, canvas.width, canvas.height);
-
-  // draw dotted line down the middle
-  for (let i = grid; i < canvas.height - grid; i += grid * 2) {
-    context.fillRect(canvas.width / 2 - grid / 2, i, grid, grid);
+  // Score
+  if(ball.x < 0) {
+    cpuScore++;
+    resetBall();
+  } else if(ball.x + ball.size > canvas.width) {
+    playerScore++;
+    resetBall();
   }
+
+  document.getElementById('score').textContent = `Player: ${playerScore} | CPU: ${cpuScore}`;
 }
 
-// listen to keyboard events to move the paddles
-document.addEventListener('keydown', function(e) {
+// Reset ball
+function resetBall() {
+  ball.x = canvas.width/2 - ballSize/2;
+  ball.y = canvas.height/2 - ballSize/2;
+  ball.dx = 4 * (Math.random() > 0.5 ? 1 : -1);
+  ball.dy = 4 * (Math.random() > 0.5 ? 1 : -1);
+}
 
-  // up arrow key
-  if (e.which === 38) {
-    rightPaddle.dy = -paddleSpeed;
-  }
-  // down arrow key
-  else if (e.which === 40) {
-    rightPaddle.dy = paddleSpeed;
-  }
+// Draw everything
+function draw() {
+  drawRect(0, 0, canvas.width, canvas.height, 'black');
+  drawNet();
+  drawRect(player.x, player.y, player.width, player.height, 'white');
+  drawRect(cpu.x, cpu.y, cpu.width, cpu.height, 'white');
+  drawRect(ball.x, ball.y, ball.size, ball.size, 'white');
+}
 
-  // w key
-  if (e.which === 87) {
-    leftPaddle.dy = -paddleSpeed;
-  }
-  // a key
-  else if (e.which === 83) {
-    leftPaddle.dy = paddleSpeed;
-  }
-});
+// Game loop
+function gameLoop() {
+  update();
+  draw();
+  requestAnimationFrame(gameLoop);
+}
 
-// listen to keyboard events to stop the paddle if key is released
-document.addEventListener('keyup', function(e) {
-  if (e.which === 38 || e.which === 40) {
-    rightPaddle.dy = 0;
-  }
-
-  if (e.which === 83 || e.which === 87) {
-    leftPaddle.dy = 0;
-  }
-});
-
-// start the game
-requestAnimationFrame(loop);
+gameLoop();
 </script>
 </body>
 </html>
