--- a/games/game-010/index.html
+++ b/games/game-010/index.html
@@ -3,12 +3,20 @@
 <head>
 <meta charset='utf-8'>
 <meta name='viewport' content='width=device-width,initial-scale=1'>
-<title>Placeholder Game 010</title>
-<style>body{font-family:system-ui,Arial,sans-serif;padding:2rem}.btn{display:inline-block;padding:0.5rem 0.75rem;background:#0366d6;color:#fff;border-radius:4px;text-decoration:none}</style>
+<title>Simon</title>
+<style>body{font-family:system-ui,Arial,sans-serif;padding:1rem;background:#222;color:#fff}.wrap{display:grid;grid-template-columns:repeat(2,150px);gap:10px;width:320px;margin:1rem auto}.btnc{width:150px;height:150px;border-radius:8px;cursor:pointer}.g{background:#2ecc71}.r{background:#e74c3c}.y{background:#f1c40f}.b{background:#3498db}</style>
 </head>
 <body>
-  <h1>Placeholder Game 010</h1>
-  <p>This is a placeholder page for Placeholder Game 010. Replace with the real game files (HTML/JS/assets) to host the game here.</p>
-  <p><a class='btn' href='../games.html'>Back to Games</a> <a class='btn' href='#' onclick="alert('No game bundled yet');return false;">Play (placeholder)</a></p>
+  <h1>Simon</h1>
+  <div class='wrap' id='w'>
+    <div class='btnc g' data-i='0'></div>
+    <div class='btnc r' data-i='1'></div>
+    <div class='btnc y' data-i='2'></div>
+    <div class='btnc b' data-i='3'></div>
+  </div>
+  <p style='text-align:center'><a class='btn' href='../games.html'>Back to Games</a></p>
+<script>
+const w=document.getElementById('w');const seq=[];let round=0;function add(){seq.push(Math.floor(Math.random()*4));play()}function play(){let i=0;let t=setInterval(()=>{highlight(seq[i]);i++;if(i>=seq.length)clearInterval(t)},600)}function highlight(i){const btn=document.querySelector(`[data-i='${i}']`);btn.style.opacity=0.4;setTimeout(()=>btn.style.opacity=1,300)}w.addEventListener('click',e=>{if(!e.target.dataset.i)return;const i=+e.target.dataset.i;const idx=seq.shift();if(i!==idx){alert('Wrong - game over');seq.length=0;round=0;return}if(seq.length===0){round++;add()}});add();
+</script>
 </body>
 </html>
