Add Featured Games section to homepage (first 10 imported games)

--- a/index.html
+++ b/index.html
@@ -38,6 +38,64 @@
         <a href="table-tennis/table-tennis.html" target="_self">Play</a>
       </div>
     </div>
+
+    <!-- Featured imported games -->
+    <section class="featured">
+      <h2>Featured Games</h2>
+      <div class="game-list">
+        <div class="game-card">
+          <img src="games/game-001/thumb.svg" alt="Snake">
+          <h3>Snake</h3>
+          <a href="games/game-001/index.html">Play</a>
+        </div>
+        <div class="game-card">
+          <img src="games/game-002/thumb.svg" alt="Tetromino">
+          <h3>Tetromino</h3>
+          <a href="games/game-002/index.html">Play</a>
+        </div>
+        <div class="game-card">
+          <img src="games/game-003/thumb.svg" alt="Breakout">
+          <h3>Breakout</h3>
+          <a href="games/game-003/index.html">Play</a>
+        </div>
+        <div class="game-card">
+          <img src="games/game-004/thumb.svg" alt="Flappy">
+          <h3>Flappy</h3>
+          <a href="games/game-004/index.html">Play</a>
+        </div>
+        <div class="game-card">
+          <img src="games/game-005/thumb.svg" alt="Minesweeper">
+          <h3>Minesweeper</h3>
+          <a href="games/game-005/index.html">Play</a>
+        </div>
+        <div class="game-card">
+          <img src="games/game-006/thumb.svg" alt="Memory">
+          <h3>Memory</h3>
+          <a href="games/game-006/index.html">Play</a>
+        </div>
+        <div class="game-card">
+          <img src="games/game-007/thumb.svg" alt="Runner">
+          <h3>Runner</h3>
+          <a href="games/game-007/index.html">Play</a>
+        </div>
+        <div class="game-card">
+          <img src="games/game-008/thumb.svg" alt="15 Puzzle">
+          <h3>15 Puzzle</h3>
+          <a href="games/game-008/index.html">Play</a>
+        </div>
+        <div class="game-card">
+          <img src="games/game-009/thumb.svg" alt="Collect">
+          <h3>Collect</h3>
+          <a href="games/game-009/index.html">Play</a>
+        </div>
+        <div class="game-card">
+          <img src="games/game-010/thumb.svg" alt="Simon">
+          <h3>Simon</h3>
+          <a href="games/game-010/index.html">Play</a>
+        </div>
+      </div>
+      <p style="margin-top:12px"><a class="btn" href="games.html">See all games</a></p>
+    </section>
   </main>
 
   <script src="main.js"></script>
